influxdb3_catalog/src/snapshots/influxdb3_catalog__catalog__tests__catalog_serialization.snap
---
source: influxdb3_catalog/src/catalog.rs
description: catalog serialization to help catch breaking changes
expression: catalog
snapshot_kind: text
---
{
  "databases": [
    [
      0,
      {
        "id": 0,
        "name": "test_db",
        "tables": [
          [
            1,
            {
              "table_id": 1,
              "table_name": "test_table_1",
              "key": [
                0,
                1,
                2
              ],
              "cols": [
                [
                  5,
                  {
                    "name": "bool_field",
                    "id": 5,
                    "type": "bool",
                    "influx_type": "field",
                    "nullable": true
                  }
                ],
                [
                  8,
                  {
                    "name": "f64_field",
                    "id": 8,
                    "type": "f64",
                    "influx_type": "field",
                    "nullable": true
                  }
                ],
                [
                  6,
                  {
                    "name": "i64_field",
                    "id": 6,
                    "type": "i64",
                    "influx_type": "field",
                    "nullable": true
                  }
                ],
                [
                  4,
                  {
                    "name": "string_field",
                    "id": 4,
                    "type": "str",
                    "influx_type": "field",
                    "nullable": true
                  }
                ],
                [
                  0,
                  {
                    "name": "tag_1",
                    "id": 0,
                    "type": {
                      "dict": [
                        "i32",
                        "str"
                      ]
                    },
                    "influx_type": "tag",
                    "nullable": false
                  }
                ],
                [
                  1,
                  {
                    "name": "tag_2",
                    "id": 1,
                    "type": {
                      "dict": [
                        "i32",
                        "str"
                      ]
                    },
                    "influx_type": "tag",
                    "nullable": false
                  }
                ],
                [
                  2,
                  {
                    "name": "tag_3",
                    "id": 2,
                    "type": {
                      "dict": [
                        "i32",
                        "str"
                      ]
                    },
                    "influx_type": "tag",
                    "nullable": false
                  }
                ],
                [
                  3,
                  {
                    "name": "time",
                    "id": 3,
                    "type": {
                      "time": [
                        "ns",
                        null
                      ]
                    },
                    "influx_type": "time",
                    "nullable": false
                  }
                ],
                [
                  7,
                  {
                    "name": "u64_field",
                    "id": 7,
                    "type": "u64",
                    "influx_type": "field",
                    "nullable": true
                  }
                ]
              ],
              "deleted": false
            }
          ],
          [
            2,
            {
              "table_id": 2,
              "table_name": "test_table_2",
              "key": [
                9,
                10,
                11
              ],
              "cols": [
                [
                  14,
                  {
                    "name": "bool_field",
                    "id": 14,
                    "type": "bool",
                    "influx_type": "field",
                    "nullable": true
                  }
                ],
                [
                  17,
                  {
                    "name": "f64_field",
                    "id": 17,
                    "type": "f64",
                    "influx_type": "field",
                    "nullable": true
                  }
                ],
                [
                  15,
                  {
                    "name": "i64_field",
                    "id": 15,
                    "type": "i64",
                    "influx_type": "field",
                    "nullable": true
                  }
                ],
                [
                  13,
                  {
                    "name": "string_field",
                    "id": 13,
                    "type": "str",
                    "influx_type": "field",
                    "nullable": true
                  }
                ],
                [
                  9,
                  {
                    "name": "tag_1",
                    "id": 9,
                    "type": {
                      "dict": [
                        "i32",
                        "str"
                      ]
                    },
                    "influx_type": "tag",
                    "nullable": false
                  }
                ],
                [
                  10,
                  {
                    "name": "tag_2",
                    "id": 10,
                    "type": {
                      "dict": [
                        "i32",
                        "str"
                      ]
                    },
                    "influx_type": "tag",
                    "nullable": false
                  }
                ],
                [
                  11,
                  {
                    "name": "tag_3",
                    "id": 11,
                    "type": {
                      "dict": [
                        "i32",
                        "str"
                      ]
                    },
                    "influx_type": "tag",
                    "nullable": false
                  }
                ],
                [
                  12,
                  {
                    "name": "time",
                    "id": 12,
                    "type": {
                      "time": [
                        "ns",
                        null
                      ]
                    },
                    "influx_type": "time",
                    "nullable": false
                  }
                ],
                [
                  16,
                  {
                    "name": "u64_field",
                    "id": 16,
                    "type": "u64",
                    "influx_type": "field",
                    "nullable": true
                  }
                ]
              ],
              "deleted": false
            }
          ]
        ],
        "processing_engine_plugins": [],
        "processing_engine_triggers": [],
        "deleted": false
      }
    ]
  ],
  "db_map": [],
  "host_id": "sample-host-id",
  "instance_id": "instance-id",
  "sequence": 0
}
