influxdb3_catalog/src/snapshots/influxdb3_catalog__catalog__tests__serialize_last_cache.snap
---
source: influxdb3_catalog/src/catalog.rs
description: catalog serialization to help catch breaking changes
expression: catalog
snapshot_kind: text
---
{
  "databases": [
    [
      0,
      {
        "id": 0,
        "name": "test_db",
        "tables": [
          [
            0,
            {
              "table_id": 0,
              "table_name": "test",
              "key": [
                0,
                1,
                2
              ],
              "cols": [
                [
                  4,
                  {
                    "name": "field",
                    "id": 4,
                    "type": "str",
                    "influx_type": "field",
                    "nullable": true
                  }
                ],
                [
                  0,
                  {
                    "name": "tag_1",
                    "id": 0,
                    "type": {
                      "dict": [
                        "i32",
                        "str"
                      ]
                    },
                    "influx_type": "tag",
                    "nullable": false
                  }
                ],
                [
                  1,
                  {
                    "name": "tag_2",
                    "id": 1,
                    "type": {
                      "dict": [
                        "i32",
                        "str"
                      ]
                    },
                    "influx_type": "tag",
                    "nullable": false
                  }
                ],
                [
                  2,
                  {
                    "name": "tag_3",
                    "id": 2,
                    "type": {
                      "dict": [
                        "i32",
                        "str"
                      ]
                    },
                    "influx_type": "tag",
                    "nullable": false
                  }
                ],
                [
                  3,
                  {
                    "name": "time",
                    "id": 3,
                    "type": {
                      "time": [
                        "ns",
                        null
                      ]
                    },
                    "influx_type": "time",
                    "nullable": false
                  }
                ]
              ],
              "last_caches": [
                {
                  "table_id": 0,
                  "table": "test",
                  "name": "test_table_last_cache",
                  "keys": [
                    1,
                    2
                  ],
                  "vals": [
                    4
                  ],
                  "n": 1,
                  "ttl": 600
                }
              ],
              "deleted": false
            }
          ]
        ],
        "processing_engine_plugins": [],
        "processing_engine_triggers": [],
        "deleted": false
      }
    ]
  ],
  "db_map": [],
  "host_id": "sample-host-id",
  "instance_id": "instance-id",
  "sequence": 0
}
